Replace sun.misc.Unsafe with jdk.internal.misc.Unsafe in the compiler.